# voxmesh

./: Cargo.toml  LICENSE  README.md
benches/: greedy_mesh.rs
examples/: render_chunk.rs
src/: block.rs  chunk.rs  face.rs  lib.rs  light.rs  mesh.rs
tests/: basic.rs  block_mesh_compat.rs  cross.rs  culling.rs  facades.rs  greedy_merge.rs  inset.rs  slabs.rs  texture_coords.rs  winding.rs
tests/common/: mod.rs
